--- a/.github/workflows/workers-deploy.yml
+++ b/.github/workflows/workers-deploy.yml
@@ -14,6 +14,10 @@ on:
 permissions:
   contents: read
 
+concurrency:
+  group: workers-deploy-${{ github.ref }}
+  cancel-in-progress: true
+
 jobs:
   deploy:
     runs-on: ubuntu-latest
@@ -40,6 +44,11 @@ jobs:
 
       - name: Typecheck workers
         run: pnpm run workers:typecheck
+
+      - name: Apply D1 migrations (remote)
+        run: |
+          pnpm -C workers/api exec wrangler d1 execute zju-charger --remote --file ../d1/migrations/0001_init.sql
+          pnpm -C workers/api exec wrangler d1 execute zju-charger --remote --file ../d1/migrations/0002_indexes.sql
 
       - name: Deploy API worker
         run: pnpm run api:deploy
